src/shaders/snapshots/ash_sdl_vulkan_tutorial__shaders__build_tasks__tests__generated_files@shaders__compiled__depth_texture.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/depth_texture.json
---
{
  "sourceFileName": "depth_texture.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "depthTexture",
      "elementType": {
        "typeName": "DepthTexture",
        "fields": [
          {
            "kind": "struct",
            "fieldName": "mvp",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 192
            },
            "structType": {
              "typeName": "MVPMatrices",
              "fields": [
                {
                  "kind": "matrix",
                  "fieldName": "model",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 64
                  },
                  "rowCount": 4,
                  "columnCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "matrix",
                  "fieldName": "view",
                  "binding": {
                    "kind": "uniform",
                    "offset": 64,
                    "size": 64
                  },
                  "rowCount": 4,
                  "columnCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "matrix",
                  "fieldName": "proj",
                  "binding": {
                    "kind": "uniform",
                    "offset": 128,
                    "size": 64
                  },
                  "rowCount": 4,
                  "columnCount": 4,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "resource",
            "fieldName": "texture",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 1,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "vertexIndex",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      },
      {
        "kind": "struct",
        "parameterName": "vertex",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 3
        },
        "typeName": "Vertex",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "position",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "color",
            "binding": {
              "kind": "varyingInput",
              "index": 1,
              "count": 1
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "texCoord",
            "binding": {
              "kind": "varyingInput",
              "index": 2,
              "count": 1
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": [
      {
        "kind": "struct",
        "parameterName": "fragVertex",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 2
        },
        "typeName": "FragVertex",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "position",
            "semanticName": "SV_POSITION",
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "color",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "texCoord",
            "binding": {
              "kind": "varyingInput",
              "index": 1,
              "count": 1
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 192
          },
          {
            "binding": 1,
            "descriptorType": "combinedTextureSampler",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 0
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
